--- a/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
+++ b/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -90,11 +91,101 @@
                     <connections>
                         <outlet property="passwordField" destination="oUe-dt-4Jc" id="Ibr-DT-vMP"/>
                         <outlet property="usernameField" destination="L4M-ik-dsL" id="5lN-CS-ggz"/>
+                        <segue destination="L9X-in-gG0" kind="show" identifier="entryList" id="ZMb-Dq-Z8M"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H2N-Xj-DBN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="676" y="1270"/>
+        </scene>
+        <!--Entry List View Controller-->
+        <scene sceneID="f0G-zR-E2b">
+            <objects>
+                <viewController id="L9X-in-gG0" customClass="BCHDWEntryListViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Qt0-CM-uCr"/>
+                        <viewControllerLayoutGuide type="bottom" id="y0b-M3-fxF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="B6j-PX-62f">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="150" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q4a-7c-rec">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="entryCell" rowHeight="150" id="4za-ZC-j2o" customClass="BCHDWEntryTableViewCell">
+                                        <rect key="frame" x="0.0" y="92" width="600" height="150"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4za-ZC-j2o" id="W42-ok-2x1">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="150"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eol-f8-bDS">
+                                                    <rect key="frame" x="10" y="10" width="580" height="130"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MOK-yj-VHW">
+                                                            <rect key="frame" x="8" y="8" width="60" height="60"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="60" id="RK9-jP-EMh"/>
+                                                                <constraint firstAttribute="width" secondItem="MOK-yj-VHW" secondAttribute="height" id="ruz-dC-akp"/>
+                                                                <constraint firstAttribute="width" constant="60" id="tB8-av-TRX"/>
+                                                            </constraints>
+                                                            <variation key="default">
+                                                                <mask key="constraints">
+                                                                    <exclude reference="ruz-dC-akp"/>
+                                                                </mask>
+                                                            </variation>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ty9-kP-Dki">
+                                                            <rect key="frame" x="80" y="8" width="488" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstItem="ty9-kP-Dki" firstAttribute="leading" secondItem="MOK-yj-VHW" secondAttribute="trailing" constant="12" id="DTv-gh-amE"/>
+                                                        <constraint firstItem="MOK-yj-VHW" firstAttribute="leading" secondItem="Eol-f8-bDS" secondAttribute="leading" constant="8" id="E2i-iw-1RV"/>
+                                                        <constraint firstAttribute="trailing" secondItem="ty9-kP-Dki" secondAttribute="trailing" constant="12" id="Fyn-zA-IRY"/>
+                                                        <constraint firstItem="ty9-kP-Dki" firstAttribute="top" secondItem="Eol-f8-bDS" secondAttribute="top" constant="8" id="NNl-10-LZ9"/>
+                                                        <constraint firstItem="MOK-yj-VHW" firstAttribute="top" secondItem="Eol-f8-bDS" secondAttribute="top" constant="8" id="zOn-zW-xgP"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="Eol-f8-bDS" secondAttribute="bottom" constant="10" id="10f-zv-w7l"/>
+                                                <constraint firstItem="Eol-f8-bDS" firstAttribute="leading" secondItem="W42-ok-2x1" secondAttribute="leading" constant="10" id="Q0i-1c-Uhb"/>
+                                                <constraint firstAttribute="trailing" secondItem="Eol-f8-bDS" secondAttribute="trailing" constant="10" id="keT-Wu-2Ht"/>
+                                                <constraint firstItem="Eol-f8-bDS" firstAttribute="top" secondItem="W42-ok-2x1" secondAttribute="top" constant="10" id="mtb-W4-ZrN"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="avatarImageView" destination="MOK-yj-VHW" id="SeA-Ey-xKZ"/>
+                                            <outlet property="subjectLabel" destination="ty9-kP-Dki" id="e39-4a-Eq8"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="q4a-7c-rec" firstAttribute="top" secondItem="B6j-PX-62f" secondAttribute="top" id="FWa-k9-Icv"/>
+                            <constraint firstItem="y0b-M3-fxF" firstAttribute="top" secondItem="q4a-7c-rec" secondAttribute="bottom" id="HhL-rr-wjP"/>
+                            <constraint firstItem="q4a-7c-rec" firstAttribute="leading" secondItem="B6j-PX-62f" secondAttribute="leading" id="P1W-Pr-IXF"/>
+                            <constraint firstAttribute="trailing" secondItem="q4a-7c-rec" secondAttribute="trailing" id="PWo-Wj-JUO"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="q4a-7c-rec" id="JiD-1w-6HT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cik-9h-9e1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1397" y="1268"/>
         </scene>
     </scenes>
 </document>
